--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "angular-font-awesome": "^3.1.2",
+    "angularfire2": "^5.4.2",
+    "bootstrap": "^4.4.1",
+    "firebase": "^7.14.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.0",
+    "ng-bootstrap": "^1.6.3",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
